<resources>
    <string name="app_name">FirstInThisVersion</string>
    <string name="toolbar_title">Discover Movie</string>
    <string name="title_activity_detail">Detail Movie</string>

    <string name="action_settings">Settings</string>
    <string name="text_storyline">STORYLINE</string>
    <string name="text_trailers">TRAILERS</string>
    <string name="text_about_film">ABOUT FILM</string>
    <string name="text_original_title">Original Title : </string>
    <string name="text_type">Type : </string>
    <string name="text_production">Production : </string>
    <string name="text_premiere">Premiere : </string>
    <string name="text_description">Description : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
