<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/jarak15dp">

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/jarak10dp"
        android:text="@string/text_about_film"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/size18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/jarak15dp"
            android:text="@string/text_original_title"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size18sp" />

        <TextView
            android:id="@+id/content_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/size18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/jarak80dp"
            android:text="@string/text_type"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size18sp" />

        <TextView
            android:id="@+id/content_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/size18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/jarak33dp"
            android:text="@string/text_production"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size18sp" />

        <TextView
            android:id="@+id/content_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/size18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_premiere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/jarak48dp"
            android:text="@string/text_premiere"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size18sp" />

        <TextView
            android:id="@+id/content_premiere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/size18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/text_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>